# ai-dev-lab

./: .coverage  .cursorignore  .dockerignore  .env  .env.sample  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  FREEZE.md  README.md  TERMINAL_OPERATIONS_GUIDE.md  compose.yaml  coverage.xml  eval.md  package-lock.json  package.json  pyproject.toml  requests.http  requirements-dev.txt  requirements.txt  test_code_org.py  test_git_flow.py  test_guardrails.py  test_safe_commit.py  test_server.py  verify_v0_6_4.py
.cursor/: environment.json  extensions.json  mcp.json  settings.json  terminal-helper.py  terminal-memory.json
.cursor/rules/: _00-project-guardrails.mdc  code-organization.mdc  docs.mdc  documentation.mdc  freeze-guardrails.mdc  git-flow.mdc  lab-development.mdc  lab.mdc  project-guardrails.mdc  rag-evaluation.mdc  security-mcp.mdc
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/scripts/: docs_check.py  freeze_guard.py
.github/workflows/: branch-name.yml  ci.yml  cursor-audit.yml  mcp-allowlist.yml  rag-eval.yml  rag-gates.yml  semantic-pr.yml  tests.yml
app/mcp-servers/promotions/: pyproject.toml  server.py
config/mcp/: allowlist.yaml
docs/: cursor-usage.md
docs/architecture/: promotion-lab-to-app.md
docs/audit/: PLAN.md
docs/audits/shared/: COVERAGE_VALIDATION.md  CURSOR_VALIDATION.md  MCP_PROMOTION_EVIDENCE.md  MCP_VALIDATION.md  VERIFICATION_REPORT.md  mcp-allow.txt  mcp-health.json
docs/deployment/: docker-deployment.md  v0.6.4.md
docs/mcp/tools/: docs-search.md  vector-search.md
docs/releases/: RELEASE_NOTES.md  v0.6.2.md  v0.6.4_prd.md
docs/research/: rag-baseline.md
docs/rules-guidelines/: cursor_mcp_guardrails.md  git-flow-guardrails.md  security-compliance-checklist.md
docs/setup/: cursor-mastery-init.md
docs/use-cases/: ai-assisted-dev.md  multi-tool-support-agent.md
eval/: README.md  run.py
eval/configs/: lab.yaml
eval/data/lab/: lab_dev.jsonl  lab_smoke.jsonl
eval/datasets/: README.md
eval/pipeline/: run_eval.py
eval/prompts/: base.yaml
evidence/: 2025-09-06_cursor_mcp_audit.md  2025-09-06_v0.6.3_index.md
evidence/artifacts/: mcp_sse_probe.txt  mcp_uvicorn_stdout.txt
evidence/eval/: README.md
evidence/learning/2025-01-09/v0.6.4/baseline/: inputs.json
lab/dsp/: README.md  demo_summarize.py  summarize.py
lab/eval/: README.md  dataset.jsonl  metrics.py  run_eval.py
lab/mcp-servers/promotions/: server.py
lab/obs/: README.md  audit.py  ingest.py
lab/rag/: chunk.py  config.yaml  embed.py  embeddings.py  eval.py  hybrid.py  ingest.py  qa.py  retrieve.py  vector.py
lab/rag/fixtures/: sample.txt
lab/rag/tests/: test_chunk_and_retrieve.py  test_hybrid.py
lab/security/: README.md  guardian.py  redact.py
lab/security/tests/: test_guardian.py  test_redact.py
lab/tests/: test_mcp_allowlist.py  test_server_health.sh  test_summarize.py
logs/: mcp_audit.jsonl  mcp_audit_2025-09-06.jsonl
mcp-server/: server.py
mcp-server/tools/: search_docs.py
mcp_server/: __init__.py  app.py  mcp_server.py  promotions_server.py  server.py  simple_server.py
mcp_server/tools/: __init__.py  git_guardrails.py  ping.py  search_docs.py  summarize.py  terminal_helper.py
scripts/ci/: parse_metrics.py  validate_mcp_allowlist.py
test_docs/: test.md
test_eval/: test.py
test_lab/: test.py
tests/rag/: test_ingest_deterministic.py  test_qa_grounding.py  test_retrieval_topk.py
